# journal-scraper

./: .gitignore  articles.py  crawler.py  db.py  lang.py  main.py  models.py  pyproject.toml  retry.py  scielo.py  transform_old.py
manual_articles/: ardeola-1.txt  arxius-1.txt  aveschile-1.txt  aveschile-2.txt  barbastella-1.txt  barbastella-2.txt  barbastella-3.txt  barbastella-4.txt  bioscriba-1.txt  dialnet-121110.txt  dialnet-2525360.txt  dialnet-2525467.txt  dialnet-3033808.txt  dialnet-3684339.txt  dialnet-3824603.txt  dialnet-3862412.txt  dialnet-4582756.txt  dialnet-4775431.txt  dialnet-5107873.txt  dialnet-5107885.txt  dialnet-5523736.txt  dialnet-5870088.txt  dialnet-6524365.txt  dialnet-7087777.txt  dialnet-7144275.txt  dialnet-8702481.txt  edentata-1.txt  gestion-1.txt  madera-1.txt  positives.csv  quebracho-1.txt  revista-bio-1.txt  revista-chl-1.txt  revista-eco-1.txt
repos/: scielo.py
repos/barbastella/: download.py  transform.py
repos/galemys/: download.py  transform.py
repos/jstage/: download.py  export.sql  transform.py
repos/local/: download.py  transform.py
repos/scielo/: download.py  export.sql  transform.py
