[project]
name = "journal-scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "apsw>=3.49.1.0",
    "beautifulsoup4>=4.13.3",
    "fasttext>=0.9.3",
    "htmlmin>=0.1.12",
    "lxml>=5.3.1",
    "numpy<2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
